# Python-Choice-Functions

./: README.MD  __init__.py  choice.py  define package for python.py  install.cmd  pyproject.toml  setup.py  uninstall.cmd
