[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "choice-functions"
version = "1.0.0"
description = "A collection of useful choice/selection functions"
readme = "README.md"
authors = [
    {name = "Als", email = "Aleksxxaln@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
